Make sure speaker icon doesn't collide with other stuff on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,3 +42,10 @@ body {
 .button:hover {
   opacity: 1;
 }
+
+
+@media (max-device-width: 731px) {
+  .app-container {
+    display: block;
+  }
+}
