--- a/src/images/css/images.css
+++ b/src/images/css/images.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  flex: 1 1 auto;
 }
 
 .controls-header {
