--- a/src/soundtrack/css/soundtrack.css
+++ b/src/soundtrack/css/soundtrack.css
@@ -17,7 +17,7 @@
 
 .soundtrack-credit {
   font-size: 12px;
-  display: none;
+  opacity: 0;
 }
 .soundtrack-credit.shown {
   animation: fadein .8s;
@@ -44,7 +44,13 @@
   }
   100% {
     opacity: 0;
-    display: none;
   }
 }
 
+
+@media (max-device-width: 731px) {
+  .soundtrack-container {
+    position: relative;
+    flex: 1 1 auto;
+  }
+}
