--- a/src/splash/css/splash.css
+++ b/src/splash/css/splash.css
@@ -14,6 +14,7 @@
 
 .splash-container {
   max-width: 600px;
+  flex: 1 1 auto;
 }
 
 .paragraph {
